# hotloading-experiment

./: .gitignore  README.md  api.h
.cargo/: config
crates/mun_codegen/: Cargo.toml
crates/mun_codegen/src/: code_gen.rs  db.rs  function.rs  lib.rs  ty.rs  types.rs
crates/mun_codegen/src/code_gen/: linker.rs  symbols.rs
crates/mun_codegen/src/ir/: function.rs  module.rs
crates/mun_codegen_ir/: Cargo.toml
crates/mun_codegen_ir/src/: code_gen.rs  db.rs  function.rs  ir.rs  lib.rs  ty.rs
crates/mun_codegen_ir/src/code_gen/: linker.rs  symbols.rs
crates/mun_codegen_ir/src/ir/: function.rs  module.rs
crates/mun_codegen_ir/tests/: test.rs
crates/mun_codegen_ir/tests/data/ir/: 0005_let_statement.txt  0006_implicit_cast.mun  0006_implicit_cast.txt  0007_assignment_operators.mun  0007_assignment_operators.txt
crates/mun_compiler/: Cargo.toml
crates/mun_compiler/src/: diagnostic.rs  lib.rs
crates/mun_syntax/: Cargo.toml
crates/mun_syntax/src/: ast.rs  grammar.ron  lib.rs  parsing.rs  ptr.rs  syntax_error.rs  syntax_kind.rs  syntax_node.rs  syntax_text.rs
crates/mun_syntax/src/ast/: expr_extensions.rs  extensions.rs  generated.rs  generated.rs.tera  traits.rs
crates/mun_syntax/src/parsing/: event.rs  grammar.rs  lexer.rs  parser.rs  text_token_source.rs  text_tree_sink.rs
crates/mun_syntax/src/parsing/grammar/: declarations.rs  expressions.rs  items.rs  params.rs  paths.rs  patterns.rs  types.rs
crates/mun_syntax/src/parsing/lexer/: classes.rs  comments.rs  cursor.rs  numbers.rs  strings.rs
crates/mun_syntax/src/syntax_kind/: generated.rs  generated.rs.tera
crates/mun_syntax/tests/: test.rs
(+75 files in other folders)
