[package]
name = "mun_codegen"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm7-0" }
mun_syntax = { path = "../mun_syntax" }
mun_errors = { path = "../mun_errors" }
failure = "0.1.5"